<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lab1="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu"
        android:title="@string/weapons"
        android:orderInCategory="101"
        lab1:showAsAction="always"
        android:icon="@drawable/ic_menu_moreoverflow_material">

        <menu>
            <item android:id="@+id/action_lightsaber"
                android:icon="@drawable/icon_lightsaber"
                lab1:showAsAction="ifRoom"
                android:title="@string/lightsaber" />

            <item android:id="@+id/action_revolver"
                android:icon="@drawable/icon_revolver"
                lab1:showAsAction="ifRoom"
                android:title="@string/revolver" />

            <item android:id="@+id/action_rifle"
                android:icon="@drawable/icon_rifle"
                lab1:showAsAction="ifRoom"
                android:title="@string/rifle" />
        </menu>
    </item>
</menu>